feat: refactoring model and api (#80)
* feat: refactoring

* feat: refactoring liquibase configuration

* fix: tests
