# src/main/java/org/tkit/onecx/parameters/domain/models/Parameter.java
@@ -12,18 +12,14 @@ import lombok.Setter;
 @Setter
 @Entity
 @Table(name = "PARAMETER", uniqueConstraints = {
-        @UniqueConstraint(columnNames = { "KEY", "APPLICATION_ID", "PRODUCT_NAME", "TENANT_ID" }) })
+        @UniqueConstraint(name = "PARAMETER_CONSTRAINT", columnNames = { "KEY", "APPLICATION_ID", "PRODUCT_NAME",
+                "TENANT_ID" }) })
 @SuppressWarnings("java:S2160")
-public class ApplicationParameter extends TraceableEntity {
+public class Parameter extends TraceableEntity {
 
     @TenantId
     @Column(name = "TENANT_ID")
     private String tenantId;
-
-    /**
-     * The UID for this class.
-     */
-    private static final long serialVersionUID = 9009055375282015896L;
 
     /**
      * The application parameter key.
@@ -57,14 +53,14 @@ public class ApplicationParameter extends TraceableEntity {
     private String productName;
 
     /**
-     * The application parameter set value.
+     * The parameter value.
      */
-    @Column(name = "SET_VALUE", columnDefinition = "varchar(1000)")
-    private String setValue;
+    @Column(name = "VALUE", columnDefinition = "varchar(5000)")
+    private String value;
 
     /**
-     * The application parameter set value.
+     * The parameter import value.
      */
-    @Column(name = "IMPORT_VALUE", columnDefinition = "varchar(1000)")
+    @Column(name = "IMPORT_VALUE", columnDefinition = "varchar(5000)")
     private String importValue;
 }
